--- a/your-code.ipynb
+++ b/your-code.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here. "
+    "import pandas as pd"
    ]
   },
   {
@@ -331,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -345,7 +345,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9412b45e6a57aa9914730508726d49801d3b2c579f461e1fb13c705887a7b1f6"
+   }
   }
  },
  "nbformat": 4,
